ライセンス情報修正

--- a/ShibugakiViewer/Views/Windows/SettingWindow.xaml
+++ b/ShibugakiViewer/Views/Windows/SettingWindow.xaml
@@ -47,7 +47,7 @@
         <Button
             Content="{x:Static properties:Resources.OkButton_Content}"
             Grid.Row="1" Margin="8,8,32,16" HorizontalAlignment="Right"
-            Width="86" Height="30"
+            Width="86" Height="30" IsDefault="True" IsCancel="True"
             Click="Button_Click"/>
         
     </Grid>
