--- a/ShibugakiViewer/Views/InformationPanes/FileInformationPage.xaml
+++ b/ShibugakiViewer/Views/InformationPanes/FileInformationPage.xaml
@@ -11,6 +11,7 @@
              xmlns:b="clr-namespace:ShibugakiViewer.Views.Behaviors"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              mc:Ignorable="d" 
+             x:Name="controlRoot"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
 
@@ -390,7 +391,99 @@
                                 Foreground="Red"/>
                         </cc:FlatButton>
                     </Grid>-->
+                    
+                    <!-- Exif -->
+                    <TextBlock Style="{StaticResource propertyName}" >
+                        <Run Text="{x:Static properties:Resources.ExifData}"/>
+                        <Run Text=" :"/>
+                    </TextBlock>
 
+                    <Grid Style="{StaticResource informationPaneButtonGridStyle}"
+                          DataContext="{Binding Path=DataContext,ElementName=controlRoot}">
+                        <cc:FlatButton
+                                Style="{StaticResource informationPaneButtonStyle}"
+                                ToolTip="{x:Static properties:Resources.ExifToDisplay}">
+                            <cc:LabeledIcon
+                                    Style="{StaticResource informationPaneContentStyle}"
+                                    IconText="{StaticResource EyeSymbol}"
+                                    Text="{x:Static properties:Resources.ExifToDisplay}"/>
+
+                            <i:Interaction.Behaviors>
+                                <b:PopupDialogBehavior
+                                    IsHorizontalOverlay="True"
+                                    IsVerticalOverlay="True"
+                                    HorizontalContentAlignment="Left"
+                                    VerticalContentAlignment="Stretch"   
+                                    Position="8,4,0,4"
+                                    IsMaskVisible="True"
+                                    IsDockToWindow="True">
+                                    <b:PopupDialogBehavior.Content>
+                                        <Border
+                                            Background="{StaticResource OptionPaneColor}"
+                                            Width="Auto"
+                                            VerticalAlignment="Stretch"
+                                            BorderBrush="Gray"
+                                            BorderThickness="1"
+                                            Margin="0">
+                                            <Grid
+                                                Margin="0" Background="Transparent"
+                                                VerticalAlignment="Stretch"
+                                                HorizontalAlignment="Stretch">
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="Auto"/>
+                                                    <RowDefinition Height="*"/>
+                                                </Grid.RowDefinitions>
+
+                                                <StackPanel
+                                                    Grid.Row="0"
+                                                    Margin="4,4,0,0">
+
+                                                    <TextBlock
+                                                        Text="{x:Static properties:Resources.ExifToDisplay}"
+                                                        FontSize="{StaticResource NormalTextSize}"/>
+                                                    <CheckBox
+                                                        Margin="11,4,0,0"
+                                                        Content="{x:Static properties:Resources.All}"
+                                                        FontSize="{StaticResource SubTitleTextSize}"/>
+
+                                                </StackPanel>
+
+                                                <ListView
+                                                    Grid.Row="1"
+                                                    Margin="4"
+                                                    ItemsSource="{Binding TagVisibilityList}"
+                                                    VirtualizingPanel.ScrollUnit="Pixel"
+                                                    SelectionMode="Single"
+                                                    VerticalAlignment="Stretch"
+                                                    HorizontalAlignment="Stretch">
+                                                    <ListView.ItemTemplate>
+                                                        <DataTemplate>
+                                                            <Grid>
+                                                                <Grid.ColumnDefinitions>
+                                                                    <ColumnDefinition Width="Auto"/>
+                                                                    <ColumnDefinition Width="*"/>
+                                                                </Grid.ColumnDefinitions>
+
+                                                                <CheckBox
+                                                                    IsChecked="{Binding IsEnabled,Mode=TwoWay}"
+                                                                    Grid.Column="0"
+                                                                    Margin="4"
+                                                                    HorizontalAlignment="Left"
+                                                                    Content="{Binding Name}"
+                                                                    FontSize="{StaticResource SubTitleTextSize}"/>
+
+                                                            </Grid>
+                                                        </DataTemplate>
+                                                    </ListView.ItemTemplate>
+                                                </ListView>
+
+                                            </Grid>
+                                        </Border>
+                                    </b:PopupDialogBehavior.Content>
+                                </b:PopupDialogBehavior>
+                            </i:Interaction.Behaviors>
+                        </cc:FlatButton>
+                    </Grid>
 
                 </StackPanel>
 
