--- a/docs/stylesheets/stylesheet.css
+++ b/docs/stylesheets/stylesheet.css
@@ -15,6 +15,8 @@ a {
   a:hover {
     text-decoration: underline; }
 
+a.header-link {color: #ffffff;} 
+
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
@@ -61,11 +63,11 @@ a {
 
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 5rem 6rem; } }
+    padding: 3rem 3rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-header {
-    padding: 3rem 4rem; } }
+    padding: 3rem 3rem; } }
 
 @media screen and (max-width: 42em) {
   .page-header {
