--- a/ShibugakiViewer/Views/Controls/SearchList.xaml
+++ b/ShibugakiViewer/Views/Controls/SearchList.xaml
@@ -47,6 +47,7 @@
                                 FilePath="{Binding ThumbnailFilePath}"
                                 DecodeHeight="96"
                                 DecodeWidth="256"
+                                IsFill="True"
                                 Quality="ThumbNail"
                                 />
                         </i:Interaction.Behaviors>
