--- a/ShibugakiViewer/Views/Windows/SettingWindow.xaml
+++ b/ShibugakiViewer/Views/Windows/SettingWindow.xaml
@@ -40,6 +40,11 @@
                 <pages:SearchSettingPage
                     DataContext="{Binding SettingViewModel,Mode=OneWay}"/>
             </TabItem>
+
+            <TabItem Header="{x:Static properties:Resources.AppSetting}">
+                <pages:AppSettingPage
+                    DataContext="{Binding SettingViewModel,Mode=OneWay}"/>
+            </TabItem>
             
         </TabControl>
 
